--- a/BSE_Working_1-May.ipynb
+++ b/BSE_Working_1-May.ipynb
@@ -30,10 +30,10 @@
     "Input_list = ['HINDUNILVR','LAURUSLABS','RELIANCE','SIS','TECHM','BLUESTARCO','WABAG','STL','RELHOME','CREDITACC']\n",
     "output = []\n",
     "\n",
-    "CONSUMER_KEY=\"HIgeXNsl8uVMWKwGZmcTRnygz\"\n",
-    "CONSUMER_SECRET=\"nyeodxBad7kPsxlNqXMbvKSZpIHolp2ghVgfNx4hzbGoZJym6E\"\n",
-    "ACCESS_TOKEN=\"467586857-O6VdHaNXBkt3MrdaPVLQSnJQJAePO0Q1bS608Lw5\"\n",
-    "ACCESS_TOKEN_SECRET=\"xVYczsZrHaHlHuVWbTMnQ7phlIVFl2quR5L6RGUDCAweJ\"\n",
+    "CONSUMER_KEY=\"XXXXXXXXXXXXXXXX\"\n",
+    "CONSUMER_SECRET=\"XXXXXXXXXXXXXXXXXXX\"\n",
+    "ACCESS_TOKEN=\"XXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "ACCESS_TOKEN_SECRET=\"XXXXXXXXXXXXXXXXXXXXXXXX\"\n",
     "\n",
     "# Authenticate to Twitter\n",
     "auth = tweepy.OAuthHandler(CONSUMER_KEY, CONSUMER_SECRET)\n",
