--- a/BSE_Working_1-May.ipynb
+++ b/BSE_Working_1-May.ipynb
@@ -495,10 +495,10 @@
     "\n",
     "URL = 'https://www.sms4india.com/api/v1/sendCampaign'\n",
     "\n",
-    "apikey='E3GIAH1G0FBX70SXY5VKZUPVRYEOGLGV'\n",
-    "secretkey='LQNHMM85ZEAJ60VU'\n",
+    "apikey='XXXXXXXXXXXXXXXXXXX'\n",
+    "secretkey='XXXXXXXXXXXXXX'\n",
     "useType='stage'\n",
-    "phoneNo='8105535588'\n",
+    "phoneNo='XXXXXXX'\n",
     "senderId='SMSIND'\n",
     "textMessage=str(output)\n",
     "\n",
