--- a/BSE_Working_2.ipynb
+++ b/BSE_Working_2.ipynb
@@ -50,10 +50,10 @@
     "Input_list = ['HINDUNILVR','LAURUSLABS','RELIANCE','SIS','TECHM','BLUESTARCO','WABAG','STL','ADANIPORTS','CREDITACC']\n",
     "output = []\n",
     "\n",
-    "CONSUMER_KEY=\"HIgeXNsl8uVMWKwGZmcTRnygz\"\n",
-    "CONSUMER_SECRET=\"nyeodxBad7kPsxlNqXMbvKSZpIHolp2ghVgfNx4hzbGoZJym6E\"\n",
-    "ACCESS_TOKEN=\"467586857-O6VdHaNXBkt3MrdaPVLQSnJQJAePO0Q1bS608Lw5\"\n",
-    "ACCESS_TOKEN_SECRET=\"xVYczsZrHaHlHuVWbTMnQ7phlIVFl2quR5L6RGUDCAweJ\"\n",
+    "CONSUMER_KEY=\"XXXXXXXXXXXXXXX\"\n",
+    "CONSUMER_SECRET=\"XXXXXXXXXXXXXXXXXXXXXXXXXXXXX\"\n",
+    "ACCESS_TOKEN=\"XXXXXXXXX-XXXXXXXXXXXXX\"\n",
+    "ACCESS_TOKEN_SECRET=\"XXXXXXXXXXXXXXXXXXXXX\"\n",
     "\n",
     "# Authenticate to Twitter\n",
     "auth = tweepy.OAuthHandler(CONSUMER_KEY, CONSUMER_SECRET)\n",
