--- a/BSE_Working_2.ipynb
+++ b/BSE_Working_2.ipynb
@@ -439,10 +439,10 @@
     "Input_list = ['HINDUNILVR','LAURUSLABS','RELIANCE','SIS','TECHM','VIRTUALG','WABAG','STL','MMTC','CREDITACC']\n",
     "output = []\n",
     "\n",
-    "CONSUMER_KEY=\"HIgeXNsl8uVMWKwGZmcTRnygz\"\n",
-    "CONSUMER_SECRET=\"nyeodxBad7kPsxlNqXMbvKSZpIHolp2ghVgfNx4hzbGoZJym6E\"\n",
-    "ACCESS_TOKEN=\"467586857-O6VdHaNXBkt3MrdaPVLQSnJQJAePO0Q1bS608Lw5\"\n",
-    "ACCESS_TOKEN_SECRET=\"xVYczsZrHaHlHuVWbTMnQ7phlIVFl2quR5L6RGUDCAweJ\"\n",
+    "CONSUMER_KEY=\"XXXXXXXXXXXXXX\"\n",
+    "CONSUMER_SECRET=\"XXXXXXXXXXXXXX\"\n",
+    "ACCESS_TOKEN=\"XXXXXXXXXXX-XXXXXXXXXX\"\n",
+    "ACCESS_TOKEN_SECRET=\"XXXXXXXXXXXXX\"\n",
     "\n",
     "# Authenticate to Twitter\n",
     "auth = tweepy.OAuthHandler(CONSUMER_KEY, CONSUMER_SECRET)\n",
@@ -525,10 +525,10 @@
     "\n",
     "URL = 'https://www.sms4india.com/api/v1/sendCampaign'\n",
     "\n",
-    "apikey='YEJRRZMY0J688Q12WTS6E9K4NHDLXZIG'\n",
-    "secretkey='ZOUDXYB1652FU858'\n",
+    "apikey='XXXXXXXXXX'\n",
+    "secretkey='XXXXXXXXXX'\n",
     "useType='prod'\n",
-    "phoneNo='8105535588'\n",
+    "phoneNo='XXXXXX'\n",
     "senderId='SMSIND'\n",
     "textMessage=str(output)\n",
     "\n",
@@ -574,8 +574,8 @@
     "\n",
     "URL = 'https://www.sms4india.com/api/v1/createSenderId'\n",
     "\n",
-    "apikey='YEJRRZMY0J688Q12WTS6E9K4NHDLXZIG'\n",
-    "secretkey='ZOUDXYB1652FU858'\n",
+    "apikey='XXXXXXXXXX'\n",
+    "secretkey='XXXXXXXXX'\n",
     "useType='prod'\n",
     "senderId='SMSIND'\n",
     "\n",
@@ -835,8 +835,8 @@
     "import urllib.request\n",
     "import urllib.parse\n",
     " \n",
-    "apikey='YzNxu/y+qFw-HAesOYPy6Me2nIT07HsxCmio9NEFQ3'\n",
-    "numbers='917983001266'\n",
+    "apikey='XXXXXXXXXXXXXXXXXXXXXXXXXX'\n",
+    "numbers='XXXXXXXXX'\n",
     "sender=''\n",
     "message='Hi, how are you ?'\n",
     "test='True'\n",
@@ -874,14 +874,14 @@
     "# Your Account Sid and Auth Token from twilio.com/console\n",
     "# DANGER! This is insecure. See http://twil.io/secure\n",
     "\n",
-    "account_sid = 'AC2a6ee3c21e8cae6a6d11da1a16b6f464'\n",
-    "auth_token = 'eb0d8929d0d45d8ae88f17abfee7ae28'\n",
+    "account_sid = 'XXXXXXXXXXXXXXXXX'\n",
+    "auth_token = 'XXXXXXXXXXXXXX'\n",
     "client = Client(account_sid, auth_token)\n",
     "\n",
     "message = client.messages.create(\n",
     "                    body=output,\n",
     "                     from_='+12057408537',\n",
-    "                     to='+917983001266'\n",
+    "                     to='+XXXXXXXX'\n",
     "                 )\n",
     "\n",
     "print(message.sid)"
